--- a/style.css
+++ b/style.css
@@ -27,13 +27,16 @@ body {
     color: var(--text);
     font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
-    opacity: 0;
-    animation: fadeIn 1s ease-in forwards;
 }
 
-@keyframes fadeIn {
+body.fade-in {
+  opacity: 0;
+  animation: fadeInEffect 1s ease-in forwards;
+}
+
+@keyframes fadeInEffect {
   to {
-    opacity: 1;
+    opacity: 1; 
   }
 }
 
@@ -92,4 +95,5 @@ body {
 .nav-pill .icon:hover .tooltip {
     opacity: 1;
     bottom: -40px;
+
 }
