--- a/style.css
+++ b/style.css
@@ -27,18 +27,14 @@ body {
     color: var(--text);
     font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
+     opacity: 0;
 }
 
 body.fade-in {
-  opacity: 0;
-  animation: fadeInEffect 1s ease-in forwards;
+  opacity: 1;
+  transition: opacity 1s ease;
 }
 
-@keyframes fadeInEffect {
-  to {
-    opacity: 1; 
-  }
-}
 
 .top-nav {
     position: sticky;
@@ -95,5 +91,4 @@ body.fade-in {
 .nav-pill .icon:hover .tooltip {
     opacity: 1;
     bottom: -40px;
-
 }
