--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
     gap: 50px;
     padding-top: -10;
 }
+
 #home {
     scroll-margin-top: 100px;
 }
@@ -17,7 +18,7 @@
 
 .sidebar {
     position: sticky;
-    top: 40px;
+    top: 0px;
     height: calc(120vh - 200px);
 }
 
@@ -30,7 +31,6 @@
     width: 100%;
     max-width: 350px;
     align-items: center;
-    
 }
 
 .image {
@@ -41,7 +41,7 @@
   background-position: center;
   margin-left: -65px;
   margin-top: 0px;
-  transform: scale(2.2);
+  transform: scale(2.3);
 }
 
 .profile-media{
@@ -320,5 +320,15 @@
 .below-about {
     margin-bottom: 150px;
     margin-top: 180px;
-
 }
+
+.reveal {
+    transform: translateY(60px);
+    transition: transform 0.7s ease-out;
+    will-change: transform;
+}
+
+.reveal.active {
+    transform: translateY(0);
+}
+
