--- a/main.css
+++ b/main.css
@@ -18,11 +18,13 @@
 
 .sidebar {
     position: sticky;
-    top: 30px;
-    height: calc(120vh - 200px);
+    top: 100px;
+    left: clamp(20px, 5vw, 175px);
+    max-height: calc(100vh - 100px);
+    overflow-y: auto;
 }
 
-.profile-card { 
+.profile-card {
     background: #161616;
     color: #919191;
     border-radius: 28px;
@@ -47,7 +49,7 @@
 .profile-media{
     position:relative;
     background: #919191;
-    border-radius: 26px;
+    border-radius: 28px;
     height: 300px;
     width: 270px;
     overflow: hidden;
@@ -65,9 +67,8 @@
 .bio {
     color:#919191;
     margin-top: 8px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
-    margin-bottom: 60px;
     font-family: Poppins;
 }
 
@@ -119,6 +120,10 @@
 
 .hero-title span {
     display: block;
+}
+
+.hero {
+    margin-top: 50px;
 }
 
 .solid {
@@ -197,50 +202,12 @@
 .problem-rotate {
     font-size: 35px;
     font-weight: 900;
-    position: relative;
-    color: #fff;
-    transform-style: preserve-3d;
-    animation: rotate3D 4s linear infinite;
+    color: transparent;
+    text-align: center;
+     -webkit-text-stroke: 2px #fff;
+    text-stroke: 2px #fff;
+    text-shadow: 2px 2px 12px rgba(255, 255, 255, 0.4);
 }
-
-.problem-rotate::before,
-.problem-rotate::after {
-    content: 'DESIGN';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.problem-rotate::before {
-    transform: translateZ(-10px);
-    animation: depthShadow2 4s linear infinite;
-}
-
-.problem-rotate::after {
-    transform: translateZ(-20px);
-    animation: depthShadow2 4s linear infinite;
-}
-
-@keyframes rotate3D {
-    0% { transform: rotateY(0deg) rotateX(0deg);}
-     25% { transform: rotateY(90deg) rotateX(10deg);}
-      50% { transform: rotateY(180deg) rotateX(0deg);}
-       75% { transform: rotateY(270deg) rotateX(-10deg);}
-        100% { transform: rotateY(360deg) rotateX(0deg);}
-}
-
-@keyframes depthShadow {
-    0%, 100% {opacity: 0.6;}
-    50% {opacity: 0.3;}
-}
-
-@keyframes depthShadow2 {
-    0%, 100% {opacity: 0.4;}
-    50% {opacity: 0.2;}
-}
-
 
 .liquid-text {
   font-size: 35px;
@@ -332,4 +299,32 @@
     transform: translateY(0);
 }
 
+.contact {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.contact-footer {
+    margin: 0;
+    padding: 20px 0 20px 0;
+}
+
+.contact-divider {
+    margin-bottom: 20px;
+}
+
+.container {
+    margin-bottom: 0;
+    padding-bottom: 0px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    margin: 0;
+    padding: 0;
+}
 
