--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 .container {
     max-width: 2500px;
     margin: 0 auto;
-    padding: 40px clamp(20px, 5vw, 175px);
+    padding: clamp(20px, 5vw, 175px);
     display: grid;
-    grid-template-columns: 30% 1fr;
-    gap: 40px;
-    align-items: start;
+    grid-template-columns: minmax(290px, 420px) 1fr;
+    gap: 50px;
+    padding-top: -10;
 }
 
 #home {
@@ -19,13 +19,9 @@
 .sidebar {
     position: sticky;
     top: 100px;
-    width: 100%;
     left: clamp(20px, 5vw, 175px);
     max-height: calc(100vh - 100px);
     overflow-y: auto;
-
-    min-width: 260px;
-    max-width: 400px;
 }
 
 .profile-card {
@@ -332,41 +328,5 @@ html {
     padding: 0;
 }
 
-@media (max-width: 1200px) {
-    .container {
-        grid-template-columns: 35% 1fr;
-        gap: 30px;
-    }
-}
 
 
-@media (max-width: 850px) {
-    .container {
-        grid-template-columns: 1fr; 
-        padding-top: 100px;
-    }
-
-    .sidebar {
-        position: relative;
-        top: 0;
-        margin: 0 auto;
-    }
-
-    .profile-card {
-        max-width: 100%;
-    }
-}
-
-.hero-title, .about-title, .projects-title, .contact-title {
-    font-size: clamp(32px, 6vw, 100px);
-    margin: 0;
-    margin-bottom: 20px;
-    margin-right: 0; 
-    line-height: 1;
-    display: block;
-}
-
-.hero .lead {
-    max-width: 90%;
-    margin-right: 0;
-}
